<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DaneActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    >
    <CheckBox
        android:id="@+id/checkBoxWilgotnosc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soil_moisure"
        android:checked="true"/>

    <CheckBox
        android:id="@+id/checkBoxTemperatura"
        android:layout_marginLeft="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:checked="false"/>

    <CheckBox
        android:id="@+id/checkBoxSwiatlo"
        android:layout_marginLeft="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light"
        android:checked="false"/>

</LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/enter_data"
                android:textAlignment="center"
                android:textSize="20dp"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="5dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from"/>

                <EditText
                    android:id="@+id/etData_Od"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:layout_centerInParent="true"
                    android:hint="@string/pattern_data"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    android:layout_marginLeft="50dp"/>

                <EditText
                    android:id="@+id/etData_Do"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:layout_centerInParent="true"
                    android:hint="@string/pattern_data"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:gravity="top"
                >

                <Button

                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="110dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/custom_button"
                    android:onClick="btnSzukaj"
                    android:text="@string/serach"
                    android:textColor="@android:color/white" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/tvKomunikat"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/average_soil_moisure"
                    android:textAlignment="center"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_marginTop="180dp"/>

                <TextView
                    android:id="@+id/tvSrednia"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text=""
                    android:textAlignment="center"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="180dp"/>



            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="220dp"
            >


            <TableLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="160dp"
                android:layout_marginTop="500dp"
                android:layout_margin="8dp"
                android:stretchColumns="1,2,3"
                >

                <TableRow>
                    <TextView
                        android:text="@string/date"
                        android:textSize="16dp"
                        android:layout_marginRight="70dp"
                        android:layout_marginLeft="30dp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:gravity="center"
                        android:layout_column="1"
                        />

                    <TextView
                        android:text="@string/sensor_name"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:gravity="center"
                        android:layout_column="1"
                        />

                    <TextView
                        android:id="@+id/zmienna"
                        android:text="@string/soil_moisure"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:gravity="center"
                        android:layout_column="1"
                        />
                </TableRow>

                <ListView
                    android:id="@+id/sensors_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    />


            </TableLayout>
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>