<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SzczegolyPolaActivity">

<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SzczegolyPolaActivity"  />-->


    <TextView
        android:id="@+id/tvStatystyka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:text="@string/statistics"
        android:textSize="30dp"
        android:textStyle="bold"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_below="@+id/tvStatystyka"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnDane"
        android:layout_marginTop="10dp"
        android:text="@string/Data"
        android:layout_weight="1"
        android:onClick="btnDane"
        android:background="@drawable/custom_button"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_below="@+id/btnDane"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnWykres"

        android:text="@string/Chart"
        android:layout_weight="1"
        android:onClick="btnWykres"
        android:background="@drawable/custom_button"/>






</RelativeLayout>