<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DodajPoleActivity"
    >



    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.DodajPoleActivity"  />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:text="@string/define_region"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/btn_send_data"
            android:background="@drawable/custom_button"
            android:text="@string/save_region"
            android:layout_above="@id/btn_clear_polygon"
            android:layout_centerHorizontal="true"
           />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="15dp"
            android:id="@+id/btn_clear_polygon"
            android:background="@drawable/custom_button"
            android:text="@string/reset_region"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            />








</RelativeLayout>